# mouserot

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  config.example.yaml  mouserot.service  systemd_install.sh
src/: bitset.cpp  cli.cpp  mouserot.cpp  mouserot.h  utils.h
